added links for P2

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		
 		<img src='vineet.jpg' alt='Vineet Sathyan'>
 		
-		<h3>Project 2 Title</h3>
-		View: [link]
-		Github: [link]
+		<h3>Password Generator</h3>
+		View: <a href='http://p2.vinumotta.com/'>link</a>
+		Github: <a href='https://github.com/vinumotta/dwa15-P2'>link</a> 
 		
 		<h3>Project 3 Title</h3>
 		View: [link]
